--- a/index.html
+++ b/index.html
@@ -4,9 +4,126 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Firebase Auth Portal</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Segoe UI', 'Roboto', 'Arial', sans-serif;
+        min-height: 100vh;
+        background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+        position: relative;
+        overflow: hidden;
+        color: #333;
+      }
+
+      .background-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 3.5rem;
+        font-weight: bold;
+        color: rgba(255, 255, 255, 0.08);
+        z-index: 0;
+        text-align: center;
+        width: 90%;
+      }
+
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        position: relative;
+        z-index: 1;
+      }
+
+      .card {
+        background: #fff;
+        padding: 2.5rem 2rem 2rem 2rem;
+        border-radius: 20px;
+        box-shadow: 0 8px 36px 0 rgba(60, 60, 90, 0.15);
+        text-align: center;
+        max-width: 350px;
+        width: 100%;
+      }
+
+      .google-logo {
+        width: 48px;
+        margin-bottom: 10px;
+        border-radius: 8px;
+      }
+
+      .button {
+        margin-top: 18px;
+        background: #4285f4;
+        color: #fff;
+        border: none;
+        border-radius: 6px;
+        padding: 12px 24px;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background 0.18s;
+        box-shadow: 0 2px 4px rgba(66, 133, 244, 0.12);
+        display: inline-flex;
+        align-items: center;
+      }
+
+      .button:hover {
+        background: #3367d6;
+      }
+
+      .error {
+        color: #e53935;
+        margin-top: 14px;
+        font-size: 1rem;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="background-text">
+      Empower People to Make a Global Change
+    </div>
+
+    <div class="container">
+      <div class="card">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+          alt="Google logo"
+          class="google-logo"
+        />
+        <h2>Sign In With Google</h2>
+        <button class="button">
+          <svg
+            viewBox="0 0 48 48"
+            width="24"
+            height="24"
+            style="margin-right: 8px"
+          >
+            <g>
+              <path
+                fill="#4285F4"
+                d="M24 9.5c3.54 0 6.31 1.54 7.77 2.84l5.71-5.71C33.97 3.51 29.37 1.5 24 1.5 14.85 1.5 6.99 7.83 3.68 16.23l6.98 5.42C12.39 15.06 17.74 9.5 24 9.5z"
+              />
+              <path
+                fill="#34A853"
+                d="M46.13 24.55c0-1.63-.14-3.18-.41-4.67H24v9.09h12.42c-.54 2.9-2.18 5.35-4.7 7.04l7.16 5.56C43.32 37.91 46.13 31.87 46.13 24.55z"
+              />
+              <path
+                fill="#FBBC05"
+                d="M10.66 28.82c-1.02-2.97-1.02-6.17 0-9.14l-6.98-5.42C1.06 17.32 0 20.54 0 24c0 3.46 1.06 6.68 2.68 9.74l6.98-5.42z"
+              />
+              <path
+                fill="#EA4335"
+                d="M24 46.5c5.95 0 10.94-1.96 14.59-5.36l-7.16-5.56c-2 1.4-4.64 2.23-7.43 2.23-6.26 0-11.61-5.56-12.34-12.92l-6.98 5.42C6.99 40.17 14.85 46.5 24 46.5z"
+              />
+              <path fill="none" d="M0 0h48v48H0z" />
+            </g>
+          </svg>
+          Sign in with Google
+        </button>
+        <p class="error"></p>
+      </div>
+    </div>
   </body>
 </html>
