--- a/index.html
+++ b/index.html
@@ -1,5 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Google Login Portal</title>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #000;
+      overflow: hidden;
+    }
+
+    .bubble {
+      position: absolute;
+      bottom: -100px;
+      background: radial-gradient(circle, #ffd70088 0%, #00000000 70%);
+      border-radius: 50%;
+      animation: floatUp linear infinite;
+      opacity: 0.6;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0);
+        opacity: 0.7;
+      }
+      100% {
+        transform: translateY(-120vh);
+        opacity: 0;
+      }
+    }
+
+    .container {
+      position: relative;
+      z-index: 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .card {
+      background: rgba(0, 0, 0, 0.8);
+      border: 1px solid gold;
+      border-radius: 16px;
+      padding: 2rem;
+      text-align: center;
+      color: white;
+      box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
+    }
+
+    .avatar {
+      width: 72px;
+      height: 72px;
+      border-radius: 50%;
+      margin-bottom: 10px;
+      border: 2px solid #ffd700;
+    }
+
+    .google-logo {
+      width: 36px;
+      margin-right: 12px;
+    }
+
+    .button {
+      margin-top: 20px;
+      background: black;
+      color: gold;
+      border: 2px solid gold;
+      border-radius: 6px;
+      padding: 12px 24px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      transition: all 0.3s;
+    }
+
+    .button:hover {
+      background: gold;
+      color: black;
+    }
+  </style>
+</head>
+<body>
+  <!-- Bubble Background -->
+  <div id="bubbles"></div>
+
+  <!-- Login Card -->
+  <div class="container">
+    <div class="card">
+      <img class="avatar" src="https://www.svgrepo.com/show/492536/google.svg" alt="Google Logo" />
+      <h2>Sign In With Google</h2>
+      <button class="button" onclick="handleGoogleSignin()">
+        <img src="https://www.svgrepo.com/show/492536/google.svg" class="google-logo" alt="Google Logo" />
+        Sign in with Google
+      </button>
+    </div>
+  </div>
+
+  <!-- Floating Bubbles Background Script -->
+  <script>
+    function createBubble() {
+      const bubble = document.createElement("div");
+      const size = Math.random() * 40 + 10;
+      bubble.className = "bubble";
+      bubble.style.width = `${size}px`;
+      bubble.style.height = `${size}px`;
+      bubble.style.left = `${Math.random() * 100}%`;
+      bubble.style.animationDuration = `${Math.random() * 5 + 5}s`;
+      document.getElementById("bubbles").appendChild(bubble);
+      setTimeout(() => bubble.remove(), 10000);
+    }
+    setInterval(createBubble, 200);
+  </script>
+
+  <!-- Firebase Auth Integration -->
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBOUvPz5GUz-hf4G0f9cVPmAX2pphdwRtg",
+      authDomain: "authportal-74915.firebaseapp.com",
+      projectId: "authportal-74915",
+      storageBucket: "authportal-74915.firebasestorage.app",
+      messagingSenderId: "42499454353",
+      appId: "1:42499454353:web:1f59c0b6938681ff249630",
+      measurementId: "G-4XBXDB6TTZ"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const provider = new firebase.auth.GoogleAuthProvider();
+
+    function handleGoogleSignin() {
+      auth.signInWithPopup(provider)
+        .then((result) => {
+          const user = result.user;
+          alert("Signed in as: " + user.displayName);
+        })
+        .catch((error) => {
+          alert("Sign-in error: " + error.message);
+        });
+    }
+  </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
