--- a/index.html
+++ b/index.html
@@ -1,303 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Google Login Portal</title>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #000;
-      overflow: hidden;
-    }
-
-    .bubble {
-      position: absolute;
-      bottom: -100px;
-      background: radial-gradient(circle, #ffd70088 0%, #00000000 70%);
-      border-radius: 50%;
-      animation: floatUp linear infinite;
-      opacity: 0.6;
-    }
-
-    @keyframes floatUp {
-      0% {
-        transform: translateY(0);
-        opacity: 0.7;
-      }
-      100% {
-        transform: translateY(-120vh);
-        opacity: 0;
-      }
-    }
-
-    .container {
-      position: relative;
-      z-index: 2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    .card {
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid gold;
-      border-radius: 16px;
-      padding: 2rem;
-      text-align: center;
-      color: white;
-      box-shadow: 0 0 30px rgba(255, 215, 0, 0.3);
-    }
-
-    .avatar {
-      width: 72px;
-      height: 72px;
-      border-radius: 50%;
-      margin-bottom: 10px;
-      border: 2px solid #ffd700;
-    }
-
-    .google-logo {
-      width: 36px;
-      margin-right: 12px;
-    }
-
-    .button {
-      margin-top: 20px;
-      background: black;
-      color: gold;
-      border: 2px solid gold;
-      border-radius: 6px;
-      padding: 12px 24px;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      transition: all 0.3s;
-    }
-
-    .button:hover {
-      background: gold;
-      color: black;
-    }
-  </style>
-</head>
-<body>
-  <!-- Bubble Background -->
-  <div id="bubbles"></div>
-
-  <!-- Login Card -->
-  <div class="container">
-    <div class="card">
-      <img class="avatar" src="https://www.svgrepo.com/show/492536/google.svg" alt="Google Logo" />
-      <h2>Sign In With Google</h2>
-      <button class="button" onclick="handleGoogleSignin()">
-        <img src="https://www.svgrepo.com/show/492536/google.svg" class="google-logo" alt="Google Logo" />
-        Sign in with Google
-      </button>
-    </div>
-  </div>
-
-  <!-- Floating Bubbles Background Script -->
-  <script>
-    function createBubble() {
-      const bubble = document.createElement("div");
-      const size = Math.random() * 40 + 10;
-      bubble.className = "bubble";
-      bubble.style.width = `${size}px`;
-      bubble.style.height = `${size}px`;
-      bubble.style.left = `${Math.random() * 100}%`;
-      bubble.style.animationDuration = `${Math.random() * 5 + 5}s`;
-      document.getElementById("bubbles").appendChild(bubble);
-      setTimeout(() => bubble.remove(), 10000);
-    }
-    setInterval(createBubble, 200);
-  </script>
-
-  <!-- Firebase Auth Integration -->
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBOUvPz5GUz-hf4G0f9cVPmAX2pphdwRtg",
-      authDomain: "authportal-74915.firebaseapp.com",
-      projectId: "authportal-74915",
-      storageBucket: "authportal-74915.firebasestorage.app",
-      messagingSenderId: "42499454353",
-      appId: "1:42499454353:web:1f59c0b6938681ff249630",
-      measurementId: "G-4XBXDB6TTZ"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const provider = new firebase.auth.GoogleAuthProvider();
-
-    function handleGoogleSignin() {
-      auth.signInWithPopup(provider)
-        .then((result) => {
-          const user = result.user;
-          alert("Signed in as: " + user.displayName);
-        })
-        .catch((error) => {
-          alert("Sign-in error: " + error.message);
-        });
-    }
-  </script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Login Page</title>
-    <style>
-      /* General Reset */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: 'Segoe UI', 'Roboto', 'Arial', sans-serif;
-        background: #000;
-        overflow: hidden;
-        height: 100vh;
-        position: relative;
-      }
-
-      /* Animated Golden Bubbles */
-      .bubbles {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        z-index: 0;
-        pointer-events: none;
-      }
-
-      .bubbles span {
-        position: absolute;
-        display: block;
-        width: 20px;
-        height: 20px;
-        background: gold;
-        border-radius: 50%;
-        animation: rise 20s linear infinite;
-        opacity: 0.2;
-      }
-
-      @keyframes rise {
-        0% {
-          transform: translateY(100vh) scale(0.5);
-        }
-        100% {
-          transform: translateY(-10vh) scale(1.2);
-        }
-      }
-
-      .container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        position: relative;
-        z-index: 1;
-      }
-
-      .card {
-        background: rgba(0, 0, 0, 0.85);
-        padding: 2.5rem 2rem;
-        border-radius: 20px;
-        box-shadow: 0 8px 36px 0 rgba(255, 215, 0, 0.3);
-        text-align: center;
-        max-width: 350px;
-        width: 100%;
-        color: #fff;
-        border: 1px solid gold;
-      }
-
-      .google-logo {
-        width: 48px;
-        margin-bottom: 20px;
-        border-radius: 8px;
-      }
-
-      .button {
-        margin-top: 18px;
-        background: gold;
-        color: #000;
-        border: none;
-        border-radius: 6px;
-        padding: 12px 24px;
-        font-size: 1rem;
-        font-weight: 500;
-        cursor: pointer;
-        transition: background 0.2s;
-        box-shadow: 0 2px 4px rgba(255, 215, 0, 0.3);
-        display: inline-flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      .button:hover {
-        background: #ffd700cc;
-      }
-
-      .error {
-        color: #e53935;
-        margin-top: 14px;
-        font-size: 1rem;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Firebase Auth Portal</title>
   </head>
-
   <body>
-    <!-- Background animation -->
-    <div class="bubbles">
-      <span style="left: 10%; animation-delay: 0s;"></span>
-      <span style="left: 25%; animation-delay: 2s; width: 15px; height: 15px;"></span>
-      <span style="left: 40%; animation-delay: 4s; width: 12px; height: 12px;"></span>
-      <span style="left: 55%; animation-delay: 6s; width: 18px; height: 18px;"></span>
-      <span style="left: 70%; animation-delay: 1s; width: 20px; height: 20px;"></span>
-      <span style="left: 85%; animation-delay: 3s; width: 10px; height: 10px;"></span>
-    </div>
-
-    <!-- Login Card -->
-    <div class="container">
-      <div class="card">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
-          alt="Google logo"
-          class="google-logo"
-        />
-        <button class="button" onclick="handleGoogleSignin()">
-          <svg width="20" height="20" viewBox="0 0 533.5 544.3" xmlns="http://www.w3.org/2000/svg">
-            <path fill="#4285F4" d="M533.5 278.4c0-17.4-1.6-34.1-4.6-50.4H272v95.4h146.9c-6.4 34-25 62.7-53.2 82v68.1h85.9c50.3-46.3 81.9-114.5 81.9-195.1z"/>
-            <path fill="#34A853" d="M272 544.3c72.6 0 133.5-24 178-65.5l-85.9-68.1c-23.9 16-54.3 25.3-92.1 25.3-70.8 0-130.7-47.8-152.1-112.1H33.4v70.6c44.7 88.1 136.8 149.8 238.6 149.8z"/>
-            <path fill="#FBBC04" d="M119.9 323.9c-10.1-30-10.1-62.4 0-92.4V160.9H33.4c-33.4 66.8-33.4 146.6 0 213.4l86.5-70.4z"/>
-            <path fill="#EA4335" d="M272 107.7c39.5 0 75 13.6 103 40.4l77.1-77.1C405.4 25 344.5 0 272 0 170.2 0 78.1 61.7 33.4 149.8l86.5 70.6c21.4-64.3 81.3-112.1 152.1-112.1z"/>
-          </svg>
-          Sign in with Google
-        </button>
-      </div>
-    </div>
-
-    <!-- Add your real logic below -->
-    <script>
-      function handleGoogleSignin() {
-        alert("This should trigger Google Sign-In.");
-        // Replace alert with real Firebase Auth logic
-      }
-    </script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
